Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -500,15 +500,12 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "77e827a9-eaa1-4d89-b13e-09fadfe8afc8"
+          "output_collection_id": "0fba93f3-90d0-4787-8fdc-5cbb18d91cfd"
         },
-        "ExecuteTime": {
-          "end_time": "2023-12-13T21:57:28.531608+00:00",
-          "start_time": "2023-12-13T21:57:24.844558+00:00"
-        }
+        "ExecuteTime": null
       },
       "execution_count": null,
-      "source": "# Trend Analysis for Likes, Comments, and Views\ndf_videos['year_month'] = df_videos['publishedAt'].dt.strftime('%Y-%m')\n\n# Calculating monthly averages\nmonthly_avg = df_videos.groupby('year_month').agg({'views':'mean', 'likes':'mean', 'comments':'mean'}).reset_index()\n\n# Plotting Trend Analysis\nplt.figure(figsize=(15, 5))\nplt.subplot(1, 3, 1)\nsns.lineplot(data=monthly_avg, x='year_month', y='views', color='blue')\nplt.title('Monthly Average Views')\nplt.xlabel('Year-Month')\nplt.ylabel('Average Views')\n\nplt.subplot(1, 3, 2)\nsns.lineplot(data=monthly_avg, x='year_month', y='likes', color='green')\nplt.title('Monthly Average Likes')\nplt.xlabel('Year-Month')\n\nplt.subplot(1, 3, 3)\nsns.lineplot(data=monthly_avg, x='year_month', y='comments', color='red')\nplt.title('Monthly Average Comments')\nplt.xlabel('Year-Month')\n\nplt.tight_layout()\nplt.show()",
+      "source": "# Trend Analysis for Likes, Comments, and Views with year bins\ndf_videos['year'] = df_videos['publishedAt'].dt.year\n\n# Calculating yearly averages\nyearly_avg = df_videos.groupby('year').agg({'views':'mean', 'likes':'mean', 'comments':'mean'}).reset_index()\n\n# Plotting Trend Analysis with year bins\nplt.figure(figsize=(15, 5))\nplt.subplot(1, 3, 1)\nsns.lineplot(data=yearly_avg, x='year', y='views', color='blue')\nplt.title('Yearly Average Views')\nplt.xlabel('Year')\nplt.ylabel('Average Views')\nplt.grid(axis='y')\n\nplt.subplot(1, 3, 2)\nsns.lineplot(data=yearly_avg, x='year', y='likes', color='green')\nplt.title('Yearly Average Likes')\nplt.xlabel('Year')\nplt.grid(axis='y')\n\nplt.subplot(1, 3, 3)\nsns.lineplot(data=yearly_avg, x='year', y='comments', color='red')\nplt.title('Yearly Average Comments')\nplt.xlabel('Year')\nplt.grid(axis='y')\n\nplt.tight_layout()\nplt.show()",
       "outputs": []
     }
   ]
