--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -500,12 +500,15 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "0fba93f3-90d0-4787-8fdc-5cbb18d91cfd"
+          "output_collection_id": "669d432a-24c0-4758-a8d2-2a5514474c85"
         },
-        "ExecuteTime": null
+        "ExecuteTime": {
+          "end_time": "2023-12-13T22:36:59.674519+00:00",
+          "start_time": "2023-12-13T22:36:58.685007+00:00"
+        }
       },
       "execution_count": null,
-      "source": "# Trend Analysis for Likes, Comments, and Views with year bins\ndf_videos['year'] = df_videos['publishedAt'].dt.year\n\n# Calculating yearly averages\nyearly_avg = df_videos.groupby('year').agg({'views':'mean', 'likes':'mean', 'comments':'mean'}).reset_index()\n\n# Plotting Trend Analysis with year bins\nplt.figure(figsize=(15, 5))\nplt.subplot(1, 3, 1)\nsns.lineplot(data=yearly_avg, x='year', y='views', color='blue')\nplt.title('Yearly Average Views')\nplt.xlabel('Year')\nplt.ylabel('Average Views')\nplt.grid(axis='y')\n\nplt.subplot(1, 3, 2)\nsns.lineplot(data=yearly_avg, x='year', y='likes', color='green')\nplt.title('Yearly Average Likes')\nplt.xlabel('Year')\nplt.grid(axis='y')\n\nplt.subplot(1, 3, 3)\nsns.lineplot(data=yearly_avg, x='year', y='comments', color='red')\nplt.title('Yearly Average Comments')\nplt.xlabel('Year')\nplt.grid(axis='y')\n\nplt.tight_layout()\nplt.show()",
+      "source": "# Trend Analysis for Likes, Comments, and Views with improved axis\ndf_videos['year'] = df_videos['publishedAt'].dt.year\n\n# Calculating yearly averages\nyearly_avg = df_videos.groupby('year').agg({'views':'mean', 'likes':'mean', 'comments':'mean'}).reset_index()\n\n# Plotting Trend Analysis with improved axis\nplt.figure(figsize=(15, 5))\nplt.subplot(1, 3, 1)\nsns.lineplot(data=yearly_avg, x='year', y='views', color='blue')\nplt.title('Yearly Average Views')\nplt.xlabel('Year')\nplt.ylabel('Average Views')\nplt.xticks(yearly_avg['year'].unique())\nplt.grid(axis='y', linestyle='-')\nplt.grid(axis='x', linestyle=':')\n\nplt.subplot(1, 3, 2)\nsns.lineplot(data=yearly_avg, x='year', y='likes', color='green')\nplt.title('Yearly Average Likes')\nplt.xlabel('Year')\nplt.xticks(yearly_avg['year'].unique())\nplt.grid(axis='y', linestyle='-')\nplt.grid(axis='x', linestyle=':')\n\nplt.subplot(1, 3, 3)\nsns.lineplot(data=yearly_avg, x='year', y='comments', color='red')\nplt.title('Yearly Average Comments')\nplt.xlabel('Year')\nplt.xticks(yearly_avg['year'].unique())\nplt.grid(axis='y', linestyle='-')\nplt.grid(axis='x', linestyle=':')\n\nplt.tight_layout()\nplt.show()",
       "outputs": []
     }
   ]
