--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -510,6 +510,20 @@
       "execution_count": null,
       "source": "# Trend Analysis for Likes, Comments, and Views with tilted X-axis labels\ndf_videos['year'] = df_videos['publishedAt'].dt.year\n\n# Calculating yearly averages\nyearly_avg = df_videos.groupby('year').agg({'views':'mean', 'likes':'mean', 'comments':'mean'}).reset_index()\n\n# Plotting Trend Analysis with tilted X-axis labels\nplt.figure(figsize=(15, 5))\nplt.subplot(1, 3, 1)\nsns.lineplot(data=yearly_avg, x='year', y='views', color='blue')\nplt.title('Yearly Average Views')\nplt.xlabel('Year')\nplt.ylabel('Average Views')\nplt.xticks(yearly_avg['year'].unique(), rotation=45)\nplt.grid(axis='y', linestyle='-')\nplt.grid(axis='x', linestyle=':')\n\nplt.subplot(1, 3, 2)\nsns.lineplot(data=yearly_avg, x='year', y='likes', color='green')\nplt.title('Yearly Average Likes')\nplt.xlabel('Year')\nplt.xticks(yearly_avg['year'].unique(), rotation=45)\nplt.grid(axis='y', linestyle='-')\nplt.grid(axis='x', linestyle=':')\n\nplt.subplot(1, 3, 3)\nsns.lineplot(data=yearly_avg, x='year', y='comments', color='red')\nplt.title('Yearly Average Comments')\nplt.xlabel('Year')\nplt.xticks(yearly_avg['year'].unique(), rotation=45)\nplt.grid(axis='y', linestyle='-')\nplt.grid(axis='x', linestyle=':')\n\nplt.tight_layout()\nplt.show()",
       "outputs": []
+    },
+    {
+      "id": "82c81995-470b-4caa-874d-641ac58acf7c",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "b56a37cd-ce6a-428e-aea0-1c7af7317e6a"
+        },
+        "ExecuteTime": null
+      },
+      "execution_count": null,
+      "source": "# Fetching video duration for each video\ndef get_video_durations(youtube, video_ids):\n    video_durations = []\n    for video_id in video_ids:\n        request = youtube.videos().list(\n            part='contentDetails',\n            id=video_id\n        )\n        response = request.execute()\n        duration = response['items'][0]['contentDetails']['duration']\n        video_durations.append(duration)\n    return video_durations\n\nvideo_durations = get_video_durations(youtube, video_ids)\ndf_videos['duration'] = video_durations\ndf_videos.head()",
+      "outputs": []
     }
   ]
 }
