--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -517,12 +517,95 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "b56a37cd-ce6a-428e-aea0-1c7af7317e6a"
+          "output_collection_id": "67b266fe-6152-4cd4-be87-c54e0fc08253"
         },
-        "ExecuteTime": null
+        "ExecuteTime": {
+          "end_time": "2023-12-13T22:42:01.120092+00:00",
+          "start_time": "2023-12-13T22:41:13.479783+00:00"
+        },
+        "datalink": {
+          "ea9a6d4e-4585-468b-b8ac-8d9a5e49d4ad": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 13,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 560,
+              "truncated_num_cols": 13,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 560,
+              "truncated_string_columns": []
+            },
+            "display_id": "ea9a6d4e-4585-468b-b8ac-8d9a5e49d4ad",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-12-13T22:42:00.957531",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_0c31242183e448b3b9653c0229bf660e"
+          }
+        }
       },
       "execution_count": null,
       "source": "# Fetching video duration for each video\ndef get_video_durations(youtube, video_ids):\n    video_durations = []\n    for video_id in video_ids:\n        request = youtube.videos().list(\n            part='contentDetails',\n            id=video_id\n        )\n        response = request.execute()\n        duration = response['items'][0]['contentDetails']['duration']\n        video_durations.append(duration)\n    return video_durations\n\nvideo_durations = get_video_durations(youtube, video_ids)\ndf_videos['duration'] = video_durations\ndf_videos.head()",
+      "outputs": []
+    },
+    {
+      "id": "9f673e09-b6e8-4c86-8b05-3b1aa9756eb0",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "8c981d3d-c6f9-40d2-9189-45cec2f4bc78"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T22:45:16.911624+00:00",
+          "start_time": "2023-12-13T22:45:16.329748+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "import isodate\n\n# Converting duration to total seconds\ndf_videos['duration_sec'] = df_videos['duration'].apply(lambda x: isodate.parse_duration(x).total_seconds())\n\n# Analyzing correlation of video duration with views, likes, and comments\ncorrelation_data = df_videos[['duration_sec', 'views', 'likes', 'comments']].corr()\n\n# Plotting the correlation heatmap\nplt.figure(figsize=(8, 6))\nsns.heatmap(correlation_data, annot=True, cmap='coolwarm')\nplt.title('Correlation Heatmap')\nplt.show()",
+      "outputs": []
+    },
+    {
+      "id": "98fa4f95-8d5e-4fc2-b28f-aad60fa71059",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "5960695e-b606-4150-b611-3a0ae7c4f0ca"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-13T22:45:10.198163+00:00",
+          "start_time": "2023-12-13T22:45:07.569399+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "!pip install isodate",
       "outputs": []
     }
   ]
