Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -607,6 +607,40 @@
       "execution_count": null,
       "source": "import isodate\n\n# Converting duration to total seconds\ndf_videos['duration_sec'] = df_videos['duration'].apply(lambda x: isodate.parse_duration(x).total_seconds())\n\n# Analyzing correlation of video duration with views, likes, and comments\ncorrelation_data = df_videos[['duration_sec', 'views', 'likes', 'comments']].corr()\n\n# Plotting the correlation heatmap\nplt.figure(figsize=(8, 6))\nsns.heatmap(correlation_data, annot=True, cmap='coolwarm')\nplt.title('Correlation Heatmap')\nplt.show()",
       "outputs": []
+    },
+    {
+      "id": "22e73b23-8520-4a84-89c4-b92c2cf89d96",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "35b0819b-0f5b-4a2e-bc56-8fea0ad924c5"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-14T00:36:29.883083+00:00",
+          "start_time": "2023-12-14T00:36:29.542595+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "# Generating descriptive and summary statistics for the dataset\ndescriptive_stats = df_videos.describe()\ndescriptive_stats",
+      "outputs": []
+    },
+    {
+      "id": "cc909757-3388-433d-8ef8-f518a0cad324",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "94eaf13b-9631-46aa-a27a-277846ca72b7"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-14T00:36:56.293882+00:00",
+          "start_time": "2023-12-14T00:36:56.128046+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "# Generating descriptive and summary statistics for the dataset\ndescriptive_stats = df_videos.describe()\nsummary_stats = df_videos.describe(include='all')\ndescriptive_stats, summary_stats",
+      "outputs": []
     }
   ]
 }
