Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -27,7 +27,12 @@
       "cell_type": "code",
       "metadata": {
         "noteable": {
-          "cell_type": "code"
+          "cell_type": "code",
+          "output_collection_id": "7cec76d5-42b3-4668-8ba7-94d7e8cd892e"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-12-14T00:42:44.060274+00:00",
+          "start_time": "2023-12-14T00:42:40.720289+00:00"
         }
       },
       "execution_count": null,
@@ -40,11 +45,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "1ee0502c-7139-4a76-a506-3153a545d3de"
+          "output_collection_id": "49784414-da9c-48f7-b2fc-5651aa938701"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T20:36:15.906174+00:00",
-          "start_time": "2023-12-13T20:36:15.745441+00:00"
+          "end_time": "2023-12-14T00:42:44.375596+00:00",
+          "start_time": "2023-12-14T00:42:44.066071+00:00"
         }
       },
       "execution_count": null,
@@ -57,11 +62,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "3c289ed8-3a4e-4b19-a0fc-8fd70f89d321"
+          "output_collection_id": "7e71b083-f394-47b8-ace3-45365b214444"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T20:36:20.990269+00:00",
-          "start_time": "2023-12-13T20:36:20.751237+00:00"
+          "end_time": "2023-12-14T00:42:44.676540+00:00",
+          "start_time": "2023-12-14T00:42:44.381179+00:00"
         }
       },
       "execution_count": null,
@@ -74,11 +79,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "c5d9d47e-146d-47d2-8a88-22411ed39df2"
+          "output_collection_id": "1928e7d3-f725-4e73-b7f8-81f5f55d8221"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T20:38:57.311194+00:00",
-          "start_time": "2023-12-13T20:38:54.462136+00:00"
+          "end_time": "2023-12-14T00:42:47.905475+00:00",
+          "start_time": "2023-12-14T00:42:44.682083+00:00"
         }
       },
       "execution_count": null,
@@ -91,12 +96,9 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "bca55d4b-e953-4a0f-8251-605e95950f8e"
+          "output_collection_id": "44efb5a7-07a5-4991-a65f-76cb9152887e"
         },
-        "ExecuteTime": {
-          "end_time": "2023-12-13T20:40:10.000111+00:00",
-          "start_time": "2023-12-13T20:39:30.686982+00:00"
-        }
+        "ExecuteTime": null
       },
       "execution_count": null,
       "source": "# Fetch statistics for each video\ndef get_video_details(youtube, video_ids):\n    video_details = []\n    for video_id in video_ids:\n        request = youtube.videos().list(\n            part='snippet,statistics',\n            id=video_id\n        )\n        response = request.execute()\n        video_details.extend(response['items'])\n    return video_details\n\nvideo_details = get_video_details(youtube, video_ids)\nlen(video_details)",
@@ -108,7 +110,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "53cc32f7-04e7-4321-bc3e-a2a23353c84e"
+          "output_collection_id": "ba7d2a0d-85b7-4512-be65-3aeb68c16d78"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T20:54:46.520550+00:00",
@@ -259,7 +261,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "22aee7c8-392f-4bf5-b1b1-bd58313e9c79"
+          "output_collection_id": "419f3fe1-0cac-4a31-909f-b6f16eb2798d"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T20:52:38.101646+00:00",
@@ -276,7 +278,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "e3dab9d0-761b-4fad-bb58-97272af1fd06"
+          "output_collection_id": "b46b1008-c671-46b7-98b4-a8ea766adfaf"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T20:56:18.196506+00:00",
@@ -293,7 +295,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "6d5dc70d-a7ac-4842-83a5-0efd4f476937"
+          "output_collection_id": "0566a3d7-1a82-4140-b924-d1b022c908f9"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T20:57:07.692525+00:00",
@@ -310,7 +312,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "9677543d-42fb-4276-96d1-f6eb9e53b1b1"
+          "output_collection_id": "35166488-1ff0-4bef-9c5a-46b640a0a6b8"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T21:07:15.124883+00:00",
@@ -327,7 +329,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "112074e1-b418-41d3-b8dc-a548f3088739"
+          "output_collection_id": "dc8d66e1-ed77-4684-bd42-f86965d3c7c5"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T21:10:07.157206+00:00",
@@ -344,7 +346,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "a3eec414-2d29-451e-843b-528a8ab148cd"
+          "output_collection_id": "0c8d3287-9eda-4854-bf01-e3fba232d599"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T21:10:50.745711+00:00",
@@ -361,7 +363,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "0cdc2870-6274-4cda-9379-deff816cd62e"
+          "output_collection_id": "0faa4c9f-caef-404c-b4fe-78f90db905ea"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T21:12:31.112724+00:00",
@@ -378,7 +380,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "be2f7614-8644-40d0-8007-09a3ab815f75"
+          "output_collection_id": "a5e6bb57-a6af-46e0-b459-03407ef8fbaf"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T21:17:29.491294+00:00",
@@ -395,7 +397,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "3fa34db7-ff4c-4f1d-bb94-cc95f20853ae"
+          "output_collection_id": "4a770c9d-ea17-484a-aa06-54b40cd2b602"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T21:23:51.132475+00:00",
@@ -412,7 +414,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "44796e69-688c-453f-b0a9-0f81d28c3255"
+          "output_collection_id": "8f72fb87-35c2-4c14-aac5-25220f3afd42"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T21:27:16.272218+00:00",
@@ -429,7 +431,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "fe36b62c-d762-416e-ac9e-b967a5a4b67f"
+          "output_collection_id": "da26e35d-99d3-43f9-ac6d-8f7b1582cd9d"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T21:37:21.287631+00:00",
@@ -446,7 +448,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "03758f0f-0143-45b1-9755-24a339b0b5f7"
+          "output_collection_id": "e53510c3-ffa3-434a-b389-55c0711a1ffa"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T21:53:48.845819+00:00",
@@ -466,7 +468,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "d98a3ba7-c15c-4f9d-abff-0f9d39258223"
+          "output_collection_id": "abb04d07-df47-425e-bf75-3638d8f96276"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T21:57:56.860018+00:00",
@@ -483,7 +485,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "01815c66-b25f-4e89-8da7-e5e1a304d23d"
+          "output_collection_id": "210db9d1-bc0e-48e1-ba5b-e193716cc868"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T21:56:10.363086+00:00",
@@ -500,7 +502,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "0fec9dfe-b41d-4390-9925-2db86002134b"
+          "output_collection_id": "a65e1e33-38c8-4566-80c0-7eaaf60ad68e"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T22:38:41.785725+00:00",
@@ -517,7 +519,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "67b266fe-6152-4cd4-be87-c54e0fc08253"
+          "output_collection_id": "603859d0-9c02-47e1-bfbf-80561f8f8f6f"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T22:42:01.120092+00:00",
@@ -580,7 +582,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "5960695e-b606-4150-b611-3a0ae7c4f0ca"
+          "output_collection_id": "e5be94fe-d510-4342-8b9b-d9cec56ca752"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T22:45:10.198163+00:00",
@@ -597,7 +599,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "8c981d3d-c6f9-40d2-9189-45cec2f4bc78"
+          "output_collection_id": "89c15772-487d-4330-a66d-7b3356a0eb71"
         },
         "ExecuteTime": {
           "end_time": "2023-12-13T22:45:16.911624+00:00",
@@ -614,7 +616,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "5649f616-66b6-4755-aa94-72f7f296c389"
+          "output_collection_id": "a29213cc-3c0e-4e45-9022-b704b50d070e"
         },
         "ExecuteTime": {
           "end_time": "2023-12-14T00:42:06.980739+00:00",
