Commit from Noteable
Pulled project file from remote storage

--- a/0_Exploratory_Data_Analysis.ipynb
+++ b/0_Exploratory_Data_Analysis.ipynb
@@ -96,9 +96,12 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "44efb5a7-07a5-4991-a65f-76cb9152887e"
+          "output_collection_id": "fc530168-1eb3-4251-8545-bdc4b3b08981"
         },
-        "ExecuteTime": null
+        "ExecuteTime": {
+          "end_time": "2023-12-14T00:43:51.053902+00:00",
+          "start_time": "2023-12-14T00:42:47.911897+00:00"
+        }
       },
       "execution_count": null,
       "source": "# Fetch statistics for each video\ndef get_video_details(youtube, video_ids):\n    video_details = []\n    for video_id in video_ids:\n        request = youtube.videos().list(\n            part='snippet,statistics',\n            id=video_id\n        )\n        response = request.execute()\n        video_details.extend(response['items'])\n    return video_details\n\nvideo_details = get_video_details(youtube, video_ids)\nlen(video_details)",
@@ -110,11 +113,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "ba7d2a0d-85b7-4512-be65-3aeb68c16d78"
+          "output_collection_id": "5d46f101-703f-460e-a3ec-0a8e3ad920cf"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T20:54:46.520550+00:00",
-          "start_time": "2023-12-13T20:54:46.298249+00:00"
+          "end_time": "2023-12-14T00:43:51.636546+00:00",
+          "start_time": "2023-12-14T00:43:51.407108+00:00"
         },
         "datalink": {
           "7873b8dd-a6e2-4543-853a-592620c39ecd": {
@@ -248,6 +251,50 @@
             "sampling_time": "2023-12-13T20:54:46.353887",
             "user_variable_name": "df_videos",
             "variable_name": "df_videos"
+          },
+          "97f60665-5549-4cb9-93dd-259ba452121e": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 6,
+              "orig_num_rows": 1303,
+              "orig_size_bytes": 72968,
+              "truncated_num_cols": 6,
+              "truncated_num_rows": 1303,
+              "truncated_size_bytes": 72968,
+              "truncated_string_columns": []
+            },
+            "display_id": "97f60665-5549-4cb9-93dd-259ba452121e",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-12-14T00:43:51.460246",
+            "user_variable_name": "df_videos",
+            "variable_name": "df_videos"
           }
         }
       },
@@ -261,11 +308,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "419f3fe1-0cac-4a31-909f-b6f16eb2798d"
+          "output_collection_id": "ea70a691-15f0-42ea-aa21-25d989a596e8"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T20:52:38.101646+00:00",
-          "start_time": "2023-12-13T20:52:37.616058+00:00"
+          "end_time": "2023-12-14T00:43:53.053374+00:00",
+          "start_time": "2023-12-14T00:43:52.019733+00:00"
         }
       },
       "execution_count": null,
@@ -278,11 +325,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "b46b1008-c671-46b7-98b4-a8ea766adfaf"
+          "output_collection_id": "73869073-5a88-42ca-89d6-7999bcb7fbec"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T20:56:18.196506+00:00",
-          "start_time": "2023-12-13T20:56:16.795318+00:00"
+          "end_time": "2023-12-14T00:43:54.774253+00:00",
+          "start_time": "2023-12-14T00:43:53.231159+00:00"
         }
       },
       "execution_count": null,
@@ -295,11 +342,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "0566a3d7-1a82-4140-b924-d1b022c908f9"
+          "output_collection_id": "9a793037-224b-4668-8e99-d46c5fc9bbad"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T20:57:07.692525+00:00",
-          "start_time": "2023-12-13T20:57:07.265388+00:00"
+          "end_time": "2023-12-14T00:43:55.363423+00:00",
+          "start_time": "2023-12-14T00:43:54.939365+00:00"
         }
       },
       "execution_count": null,
@@ -312,11 +359,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "35166488-1ff0-4bef-9c5a-46b640a0a6b8"
+          "output_collection_id": "c22e01b0-25cf-45ab-8457-a1f1f165e8b9"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T21:07:15.124883+00:00",
-          "start_time": "2023-12-13T21:07:14.957790+00:00"
+          "end_time": "2023-12-14T00:43:55.702121+00:00",
+          "start_time": "2023-12-14T00:43:55.537278+00:00"
         }
       },
       "execution_count": null,
@@ -329,11 +376,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "dc8d66e1-ed77-4684-bd42-f86965d3c7c5"
+          "output_collection_id": "978b2d5a-18fb-45e0-b19a-62c9581649b3"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T21:10:07.157206+00:00",
-          "start_time": "2023-12-13T21:10:06.711284+00:00"
+          "end_time": "2023-12-14T00:43:56.155196+00:00",
+          "start_time": "2023-12-14T00:43:55.707421+00:00"
         }
       },
       "execution_count": null,
@@ -346,11 +393,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "0c8d3287-9eda-4854-bf01-e3fba232d599"
+          "output_collection_id": "49707963-72ef-46fb-9065-90f43c330bdc"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T21:10:50.745711+00:00",
-          "start_time": "2023-12-13T21:10:50.290804+00:00"
+          "end_time": "2023-12-14T00:43:56.902452+00:00",
+          "start_time": "2023-12-14T00:43:56.413774+00:00"
         }
       },
       "execution_count": null,
@@ -363,11 +410,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "0faa4c9f-caef-404c-b4fe-78f90db905ea"
+          "output_collection_id": "f036e3e8-dc81-4991-b623-ba0a28cf2e12"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T21:12:31.112724+00:00",
-          "start_time": "2023-12-13T21:12:30.685014+00:00"
+          "end_time": "2023-12-14T00:43:57.487770+00:00",
+          "start_time": "2023-12-14T00:43:57.043381+00:00"
         }
       },
       "execution_count": null,
@@ -380,11 +427,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "a5e6bb57-a6af-46e0-b459-03407ef8fbaf"
+          "output_collection_id": "b829be0a-3b6f-4ba9-b0b0-7ccc46a126b5"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T21:17:29.491294+00:00",
-          "start_time": "2023-12-13T21:17:29.083960+00:00"
+          "end_time": "2023-12-14T00:43:58.243248+00:00",
+          "start_time": "2023-12-14T00:43:57.796827+00:00"
         }
       },
       "execution_count": null,
@@ -397,11 +444,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "4a770c9d-ea17-484a-aa06-54b40cd2b602"
+          "output_collection_id": "bddca80f-70a1-492c-a087-5da5afa16023"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T21:23:51.132475+00:00",
-          "start_time": "2023-12-13T21:23:49.973534+00:00"
+          "end_time": "2023-12-14T00:43:59.515464+00:00",
+          "start_time": "2023-12-14T00:43:58.376459+00:00"
         }
       },
       "execution_count": null,
@@ -414,11 +461,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "8f72fb87-35c2-4c14-aac5-25220f3afd42"
+          "output_collection_id": "7afd9a09-a83f-40a6-b002-19485d0c18c3"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T21:27:16.272218+00:00",
-          "start_time": "2023-12-13T21:27:15.170753+00:00"
+          "end_time": "2023-12-14T00:44:00.753029+00:00",
+          "start_time": "2023-12-14T00:43:59.700352+00:00"
         }
       },
       "execution_count": null,
@@ -431,11 +478,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "da26e35d-99d3-43f9-ac6d-8f7b1582cd9d"
+          "output_collection_id": "3cae6b10-242a-4db5-be02-f4454447e792"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T21:37:21.287631+00:00",
-          "start_time": "2023-12-13T21:37:20.673586+00:00"
+          "end_time": "2023-12-14T00:44:01.573048+00:00",
+          "start_time": "2023-12-14T00:44:00.984390+00:00"
         }
       },
       "execution_count": null,
@@ -448,11 +495,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "e53510c3-ffa3-434a-b389-55c0711a1ffa"
+          "output_collection_id": "ee649d30-6268-4680-abff-48b3fdf46084"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T21:53:48.845819+00:00",
-          "start_time": "2023-12-13T21:53:46.076369+00:00"
+          "end_time": "2023-12-14T00:44:04.454609+00:00",
+          "start_time": "2023-12-14T00:44:01.720185+00:00"
         },
         "jupyter": {
           "outputs_hidden": true
@@ -468,11 +515,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "abb04d07-df47-425e-bf75-3638d8f96276"
+          "output_collection_id": "5a5cea84-1ee4-457a-99ac-a5e4c0c17f1c"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T21:57:56.860018+00:00",
-          "start_time": "2023-12-13T21:57:55.754703+00:00"
+          "end_time": "2023-12-14T00:44:05.930948+00:00",
+          "start_time": "2023-12-14T00:44:04.460797+00:00"
         }
       },
       "execution_count": null,
@@ -485,11 +532,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "210db9d1-bc0e-48e1-ba5b-e193716cc868"
+          "output_collection_id": "62dd05c9-9701-4bb7-941c-35944a754f79"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T21:56:10.363086+00:00",
-          "start_time": "2023-12-13T21:56:09.089487+00:00"
+          "end_time": "2023-12-14T00:44:07.365507+00:00",
+          "start_time": "2023-12-14T00:44:06.188987+00:00"
         }
       },
       "execution_count": null,
@@ -502,11 +549,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "a65e1e33-38c8-4566-80c0-7eaaf60ad68e"
+          "output_collection_id": "04fd2873-77f5-4e54-8c14-1f60f6b6bc71"
         },
         "ExecuteTime": {
-          "end_time": "2023-12-13T22:38:41.785725+00:00",
-          "start_time": "2023-12-13T22:38:40.834207+00:00"
+          "end_time": "2023-12-14T00:44:08.417926+00:00",
+          "start_time": "2023-12-14T00:44:07.475284+00:00"
         }
       },
       "execution_count": null,
@@ -521,10 +568,7 @@
           "cell_type": "code",
           "output_collection_id": "603859d0-9c02-47e1-bfbf-80561f8f8f6f"
         },
-        "ExecuteTime": {
-          "end_time": "2023-12-13T22:42:01.120092+00:00",
-          "start_time": "2023-12-13T22:41:13.479783+00:00"
-        },
+        "ExecuteTime": null,
         "datalink": {
           "ea9a6d4e-4585-468b-b8ac-8d9a5e49d4ad": {
             "applied_filters": [],
@@ -608,23 +652,6 @@
       },
       "execution_count": null,
       "source": "import isodate\n\n# Converting duration to total seconds\ndf_videos['duration_sec'] = df_videos['duration'].apply(lambda x: isodate.parse_duration(x).total_seconds())\n\n# Analyzing correlation of video duration with views, likes, and comments\ncorrelation_data = df_videos[['duration_sec', 'views', 'likes', 'comments']].corr()\n\n# Plotting the correlation heatmap\nplt.figure(figsize=(8, 6))\nsns.heatmap(correlation_data, annot=True, cmap='coolwarm')\nplt.title('Correlation Heatmap')\nplt.show()",
-      "outputs": []
-    },
-    {
-      "id": "08039a4f-7e2b-4c23-9829-b24d480d1c18",
-      "cell_type": "code",
-      "metadata": {
-        "noteable": {
-          "cell_type": "code",
-          "output_collection_id": "a29213cc-3c0e-4e45-9022-b704b50d070e"
-        },
-        "ExecuteTime": {
-          "end_time": "2023-12-14T00:42:06.980739+00:00",
-          "start_time": "2023-12-14T00:42:06.815340+00:00"
-        }
-      },
-      "execution_count": null,
-      "source": "# Generating descriptive and summary statistics for the dataset\ndescriptive_stats = df_videos.describe()\nsummary_stats = df_videos.describe(include='all')\ndescriptive_stats, summary_stats",
       "outputs": []
     }
   ]
